Fixed some spacing and enhanced the focus stuff.

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -794,7 +794,7 @@ a.text-decoration-none,a.text-decoration-none:hover{text-decoration:none}
 /* line 19 : /Users/kentcdodds/Developer/bucketstreams/stylus/main/index.styl */
 
 /* line 1 : /Users/kentcdodds/Developer/bucketstreams/stylus/main/index.styl */
-.main-content{height:100%;margin-top:40px;padding:4px 40px 40px 40px}
+.main-content{margin-top:40px;padding:4px 40px 40px 40px}
 /* line 1 : /Users/kentcdodds/Developer/bucketstreams/stylus/main/profile.styl */
 
 /* line 2 : /Users/kentcdodds/Developer/bucketstreams/stylus/main/profile.styl */
