--- a/stylus/main/index.styl
+++ b/stylus/main/index.styl
@@ -1,4 +1,3 @@
 .main-content
-  height 100%
   margin-top 40px
   padding 4px 40px 40px 40px
